Add MailerLite reminder flow and payment integration
Introduces a new NextSteps component with payment and reminder options, integrates Paystack payment, and adds a Netlify serverless function to add MailerLite subscribers with reminder scheduling. Updates CTASection styles, index.html for Paystack and Google Tag, and enhances PaymentOptionsModal with email and payment reason form. Adds .env for MailerLite API key and updates routing in App.tsx.

--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
     <script async
-      src="https://www.googletagmanager.com/gtag/js?id=G-6EZW4P7T9D"></script>
+      src="https://www.googletagmanager.com/gtag/js?id=G-NML9GQR03T"></script>
     <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-6EZW4P7T9D');
+  gtag('config', 'G-NML9GQR03T');
 </script>
+
+    <script src="https://js.paystack.co/v1/inline.js"></script>
+    
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -24,5 +28,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
   </body>
 </html>
