--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <!-- Google tag (gtag.js) -->
+
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P2QFZ489');</script>
+
+    <!-- End Google Tag Manager -->
+
     <script async
       src="https://www.googletagmanager.com/gtag/js?id=G-NML9GQR03T"></script>
     <script>
@@ -14,7 +21,7 @@
 </script>
 
     <script src="https://js.paystack.co/v1/inline.js"></script>
-    
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
