--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -34,7 +34,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Pink & Purple — Business Registration, Automation & Digital Tools for Entrepreneurs</title>
+  <title>Pink & Purple</title>
   <meta name="description"
     content="Pink & Purple helps entrepreneurs register their business, automate tasks, and access powerful digital tools to start, manage, and grow their business. Built for African SMEs." />
   <meta name="keywords"
@@ -63,11 +63,11 @@
   <meta name="googlebot" content="index, follow" />
 
   <!-- Icons -->
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="../pink-purple/public/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="../pink-purple/public/favicon.svg" />
+  <link rel="shortcut icon" href="../pink-purple/public/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../pink-purple/public/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Pink & Purple" />
-  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+  <link rel="manifest" href="../pink-purple/public/site.webmanifest" />
 
 </head>
