--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -1,73 +1,54 @@
+<!doctype html>
+<html lang="en">
+
 <head>
 
-  <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
-        'gtm.start': new Date().getTime(), event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-P2QFZ489');
-  </script>
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-P2QFZ489');</script>
+
   <!-- End Google Tag Manager -->
 
-  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NML9GQR03T"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
+
     gtag('config', 'G-NML9GQR03T');
   </script>
 
-  <!-- Paystack -->
   <script src="https://js.paystack.co/v1/inline.js"></script>
 
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- Responsive -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Primary Meta Tags -->
-  <title>Pink & Purple</title>
-  <meta name="description"
-    content="Pink & Purple helps entrepreneurs register their business, automate tasks, and access powerful digital tools to start, manage, and grow their business. Built for African SMEs." />
-  <meta name="keywords"
-    content="business registration, South Africa business, SME tools, automation, digital business tools, pink and purple, entrepreneur tools, startup help, company registration, business growth" />
-  <meta name="author" content="Pink & Purple" />
-  <link rel="canonical" href="https://pinkandp.com" />
-
-  <!-- Open Graph / WhatsApp / Facebook -->
+  <!-- Open Graph / WhatsApp / Social Preview -->
   <meta property="og:title" content="Pink & Purple — Empowering Small Businesses" />
-  <meta property="og:description"
-    content="Start, grow, and streamline your business the smart way with Pink & Purple. Register your business and access digital automation tools." />
+  <meta property="og:description" content="Start, grow, and streamline your business the smart way. Register your business, access digital tools, and automate your workflows with Pink & Purple." />
   <meta property="og:image" content="https://pinkandp.com/preview.jpg" />
   <meta property="og:url" content="https://pinkandp.com" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Pink & Purple" />
+  <meta name="description" content="Pink & Purple helps entrepreneurs simplify business registration and access digital tools to grow smarter." />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Pink & Purple — Empowering Small Businesses" />
-  <meta name="twitter:description"
-    content="Tools and services to help entrepreneurs start, grow, and automate their business operations." />
-  <meta name="twitter:image" content="https://pinkandp.com/preview.jpg" />
-
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
-  <meta name="googlebot" content="index, follow" />
-
-  <!-- Icons -->
-  <link rel="icon" type="image/png" href="../pink-purple/public/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="../pink-purple/public/favicon.svg" />
-  <link rel="shortcut icon" href="../pink-purple/public/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="../pink-purple/public/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href=../pink-purple/public/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href=../pink-purple/public/favicon.svg" />
+  <link rel="shortcut icon" href=../pink-purple/public/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href=../pink-purple/public/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Pink & Purple" />
-  <link rel="manifest" href="../pink-purple/public/site.webmanifest" />
-
+  <link rel="manifest" href=../pink-purple/public/site.webmanifest" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pink & Purple</title>
 </head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+
+</body>
+
+</html>
