--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -12,8 +12,6 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-P2QFZ489');</script>
 
-  <!-- End Google Tag Manager -->
-
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NML9GQR03T"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -26,23 +24,41 @@
   <script src="https://js.paystack.co/v1/inline.js"></script>
 
   <meta charset="UTF-8" />
-
-  <!-- Open Graph / WhatsApp / Social Preview -->
-  <meta property="og:title" content="Pink & Purple — Empowering Small Businesses" />
-  <meta property="og:description" content="Start, grow, and streamline your business the smart way. Register your business, access digital tools, and automate your workflows with Pink & Purple." />
-  <meta property="og:image" content="https://pinkandp.com/preview.jpg" />
-  <meta property="og:url" content="https://pinkandp.com" />
-  <meta property="og:type" content="website" />
-  <meta name="description" content="Pink & Purple helps entrepreneurs simplify business registration and access digital tools to grow smarter." />
-
-  <link rel="icon" type="image/png" href=../pink-purple/public/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href=../pink-purple/public/favicon.svg" />
-  <link rel="shortcut icon" href=../pink-purple/public/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href=../pink-purple/public/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Pink & Purple" />
-  <link rel="manifest" href=../pink-purple/public/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
   <title>Pink & Purple</title>
+  <meta name="description" content="Empower your African business with Pink & Purple. Simplify business registration, automate workflows, manage customers with CRM, and access digital tools to grow your enterprise smarter and faster." />
+  <meta name="keywords" content="African business registration, business automation, CRM tools, entrepreneur support, business growth tools, small business management, digital business tools, startup registration, African entrepreneurs, business streamlining" />
+  <meta name="author" content="Pink & Purple" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <link rel="canonical" href="https://pinkandp.com" />
+
+  <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Pink & Purple" />
+  <meta property="og:title" content="Pink & Purple | African Business Registration, CRM & Automation Tools" />
+  <meta property="og:description" content="Empower your African business with Pink & Purple. Simplify business registration, automate workflows, manage customers with CRM, and access digital tools to grow your enterprise smarter and faster." />
+  <meta property="og:url" content="https://pinkandp.com" />
+  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Pink+%26+Purple" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pink & Purple | African Business Registration, CRM & Automation Tools" />
+  <meta name="twitter:description" content="Empower your African business with Pink & Purple. Simplify business registration, automate workflows, manage customers with CRM, and access digital tools to grow your enterprise smarter and faster." />
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Pink+%26+Purple" />
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Pink & Purple" />
+  <link rel="manifest" href="/site.webmanifest" />
+
 </head>
 
 <body>
