Update business registration messaging and pricing
Simplified Open Graph meta tags and landing page messaging to focus on business registration. Updated button label in NavBar and increased public company registration price from 850 to 950. Changed CSS gradient class names from 'bg-gradient-to-*' to 'bg-linear-to-*' for consistency and fixed flexbox shrink property in pricing cards.

--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -38,8 +38,8 @@
   <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Pink & Purple" />
-  <meta property="og:title" content="Pink & Purple | African Business Registration, CRM & Automation Tools" />
-  <meta property="og:description" content="Empower your African business with Pink & Purple. Simplify business registration, automate workflows, manage customers with CRM, and access digital tools to grow your enterprise smarter and faster." />
+  <meta property="og:title" content="Pink & Purple | African Business Registration" />
+  <meta property="og:description" content="Fast Business Registration" />
   <meta property="og:url" content="https://pinkandp.com" />
   <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Pink+%26+Purple" />
   <meta property="og:image:width" content="1200" />
