--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -28,8 +28,9 @@
 
   <!-- SEO Meta Tags -->
   <title>Pink & Purple</title>
-  <meta name="description" content="Empower your African business with Pink & Purple. Simplify business registration, automate workflows, manage customers with CRM, and access digital tools to grow your enterprise smarter and faster." />
-  <meta name="keywords" content="African business registration, business automation, CRM tools, entrepreneur support, business growth tools, small business management, digital business tools, startup registration, African entrepreneurs, business streamlining" />
+  <meta name="description" content="Pink and Purple Fast Business Registration" />
+  <meta name="description" content="Empower your business with Pink & Purple. Simplify business registration" />
+  <meta name="keywords" content="Business registration, entrepreneur support, business growth tools, small business management, digital business tools, startup registration, African entrepreneurs, business streamlining" />
   <meta name="author" content="Pink & Purple" />
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
