--- a/pink-purple/index.html
+++ b/pink-purple/index.html
@@ -28,7 +28,6 @@
 
   <!-- SEO Meta Tags -->
   <title>Pink & Purple</title>
-  <meta name="description" content="Pink and Purple Fast Business Registration" />
   <meta name="description" content="Empower your business with Pink & Purple. Simplify business registration" />
   <meta name="keywords" content="Business registration, entrepreneur support, business growth tools, small business management, digital business tools, startup registration, African entrepreneurs, business streamlining" />
   <meta name="author" content="Pink & Purple" />
@@ -39,10 +38,10 @@
   <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Pink & Purple" />
-  <meta property="og:title" content="Pink & Purple | African Business Registration" />
-  <meta property="og:description" content="Fast Business Registration" />
+  <meta property="og:title" content="Pink & Purple | Fast Business Registration" />
+  <meta property="og:description" content="Empower your business with Pink & Purple. Simplify business registration" />
   <meta property="og:url" content="https://pinkandp.com" />
-  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Pink+%26+Purple" />
+  <meta property="og:image" content="/favicon-96x96.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
